--- a/marisa.html
+++ b/marisa.html
@@ -34,9 +34,9 @@ color:crimson
 <p>อายุ 22 ปี       เกิด วันที่ 7 กันยายน พ.ศ. 2541</p>
 <p>ศาสนา พุทธ    สัญชาติ ไทย</p>
 <h2 class="qn">ช่องทางการติดต่อ</h2>
-<p>ที่อยู่ 1263/18 พฤกษา ทาวน์ เน็กซ์ พระยาสุเรนทร์ 31 ถนนพระยาสุเรนทร์ แขวงบางชัน เขตคลองสามวา กทม. 10510</p>
-<p>เบอร์โทรศัพท์ 092-139-9779</p>
-<a href="mailto:qnmarisa@gmail.com">Email me</a>
+<p>ที่อยู่ xxxx/xx xxx แขวงxxx เขตxxx กทม. 10xx0</p>
+<p>เบอร์โทรศัพท์ 0xx-xxx-xxxx</p>
+<a href="mailto:marisa@gmail.com">Email me</a>
 <h2 class="qq">ประวัติการศึกษา</h2>
 <p>ปริญญาตรี : เอกการบัญชี คณะพาณิชยศาสตร์และการบัญชี มหาวิทยาลัยธรรมศาสตร์ GPAX : 3.35</p>
 <p>มัธยมศึกษา : โรงเรียนนวมินทราชินูทิศ เตรียมอุดมศึกษาน้อมเกล้า GPAX : 3.76</p>
