--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
   </head>
-  <body>Welcome to Sazzy Girls Co., Ltd.</body>
+  <body>
+    <h1>Member of Sazzy Girls Co., Ltd.</h1>
+  <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/aninthisa.html">Aninthisa</button>
+    <p><button type="button" class="btn btn-danger"><a href="sazzygirls.github.io/nonticha.html">Nonticha</button>
+      <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/marisa.html">Marisa</button>
+    <p><button type="button" class="btn btn-danger"><a href="sazzygirls.github.io/chanisara.html">Chanisara</button>
+      <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/sugun.html">Sugun</button>
+      </body>
 </html>
