--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sazzy Girls</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
   </head>
   <body>
-    <h1>Member of Sazzy Girls Co., Ltd.</h1>
+    
+    <div class="jumbotron">
+  <h1>Sazzy Girls Co., Ltd.</h1>
+    </div>
+    
   <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/aninthisa.html">Aninthisa</button>
     <p><button type="button" class="btn btn-danger"><a href="sazzygirls.github.io/nonticha.html">Nonticha</button>
       <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/marisa.html">Marisa</button>
