--- a/marisa.html
+++ b/marisa.html
@@ -53,6 +53,6 @@ color:crimson
 <p>เข้าฟิตเนส</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ9zcfc_NxvGOSmENPFbSOm76Kj7Pw-A7gTlR3lSGT4lpVPaETE" alt="Fitness">
 <p></p>
-<button type="button" class="btn btn-danger"><a href="sazzygirls.github.io/index.html">BACK</button>
+<button type="button" class="btn btn-danger"><a href="sazzygirls.github.io">BACK</button>
 </body>
 </html>
