--- a/aninthisa.html
+++ b/aninthisa.html
@@ -36,6 +36,6 @@
   <li>ท่องเที่ยว</li>
     <img src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.0-9/p960x960/69264349_2713467822024993_970686725137367040_o.jpg?_nc_cat=109&_nc_oc=AQlp_WroEaahEfyjpLuefDVkQE1hzB61uu3vMMtCeRf2aj09GUlyfTzVxoM-vagnxWE&_nc_ht=scontent.fbkk2-7.fna&_nc_tp=1&oh=1e4a1a06495391e7bfcf06976281b00a&oe=5EA4D03E" alt="travelling">
  </ul> 
-  <button type="button" class="btn btn-danger"<a href="sazzygirls.github.io/index.html">BACK</button>
+  <button type="button" class="btn btn-danger"<a href="http://sazzygirls.github.io">BACK</button>
 </body>
 </html>
