--- a/sugun.html
+++ b/sugun.html
@@ -41,7 +41,8 @@
   <li>ท่องเที่ยว</li>
     <p> </p>
   <img src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.0-9/82654409_3088171171252691_9036294187837816832_n.jpg?_nc_cat=108&_nc_oc=AQkCJHt1UNGYcyo2y7nppVbXSDDnfdb3GE1wE4R0Nx981kUrMllnbjSOID0S1s3eZZc&_nc_ht=scontent.fbkk2-7.fna&oh=fbb132b1db877e266a8e08aa3c5a1d76&oe=5EA8EC90" alt="Travelling">
- <p><button type="button" class="btn btn-danger"><a href="sazzygirls.github.io">Back</button>   
+   <p> </p>
+    <p><button type="button" class="btn btn-danger"><a href="index.html">Back</button>   
   </ul>
 </body>
 </html>
