--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <h1>Sazzy Girls Co., Ltd.</h1>
     </div>
     
-  <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/aninthisa.html">Aninthisa</button>
-    <p><button type="button" class="btn btn-danger"><a href="sazzygirls.github.io/nonticha.html">Nonticha</button>
-      <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/marisa.html">Marisa</button>
-    <p><button type="button" class="btn btn-danger"><a href="sazzygirls.github.io/chanisara.html">Chanisara</button>
-      <p><button type="button" class="btn btn-warning"><a href="sazzygirls.github.io/sugun.html">Sugun</button>
+  <p><button type="button" class="btn btn-warning"><a href="aninthisa.html">Aninthisa</button>
+    <p><button type="button" class="btn btn-danger"><a href="nonticha.html">Nonticha</button>
+      <p><button type="button" class="btn btn-warning"><a href="marisa.html">Marisa</button>
+    <p><button type="button" class="btn btn-danger"><a href="chanisara.html">Chanisara</button>
+      <p><button type="button" class="btn btn-warning"><a href="sugun.html">Sugun</button>
       </body>
 </html>
