--- a/nonticha.html
+++ b/nonticha.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-h1{
+<style> h1{
  color:crimson
 }
 .maintext{
@@ -15,6 +15,7 @@ h1{
 .donut{
   color:Plum
 }
+ </style>
 </head>
 <body>
 </div>
