--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <img class="card-img-top" src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.0-9/p960x960/65280249_2337218496358764_6120770748366716928_o.jpg?_nc_cat=109&_nc_ohc=TscJSkXBPMgAX_qTofd&_nc_ht=scontent.fbkk2-7.fna&_nc_tp=6&oh=53ee4933049b0e8e2171d76bb0c837cd&oe=5EC98F8B" alt="Card image">
   <div class="card-body">
     <h4 class="card-title">Nonticha Takoporn</h4>
-    <p class="card-text">Sazzygirls co.</p>
+    <p class="card-text">Sazzy Girls Co., LTD.</p>
   <a href="nonticha.html" class="btn btn-primary">See Profile</a>
   </div>
 </div>
@@ -45,7 +45,7 @@
   <img class="card-img-top" src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.0-9/p720x720/82110282_1466051840235993_6779159646813814784_o.jpg?_nc_cat=106&_nc_ohc=aOZ0qAnc2jMAX_5ng04&_nc_ht=scontent.fbkk2-7.fna&_nc_tp=6&oh=9f598420f36af0b604331baa032f1c3d&oe=5E9249CA" alt="Queen's image">
   <div class="card-body">
     <h4 class="card-title">Marisa Asanaruttanajinda</h4>
-    <p class="card-text">Sazzygirls co. </p>
+    <p class="card-text">Sazzy Girls Co., LTD. </p>
     <a href="marisa.html"class="btn btn-primary">See Profile</a>
   </div>
 </div>
@@ -53,7 +53,7 @@
   <img class="card-img-top" src="https://scontent.fbkk2-6.fna.fbcdn.net/v/t1.0-9/82578008_2707472412679181_2324186797355040768_n.jpg?_nc_cat=104&_nc_ohc=_iQY8DRRzqMAX83bjJS&_nc_ht=scontent.fbkk2-6.fna&oh=e65b29a916c876341b11aeadc06d4375&oe=5E9F83C8" alt="chanisarah">
   <div class="card-body">
     <h4 class="card-title">Chanisara Hutangkura</h4>
-    <p class="card-text">Sazzy Girls Co., LTD</p>
+    <p class="card-text">Sazzy Girls Co., LTD.</p>
     <a href="chanisara.html" class="btn btn-primary">See Profile</a>
   </div>
 </div>
