--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <p class="card-text">Sazzy Girls Co., LTD.</p>
     <a href="aninthisa.html" class="btn btn-primary">See Profile</a>
   </div>
-</div>  
+    </div> 
+    <div class="card-group">
   <div class="card" style="width:300px">
   <img class="card-img-top" src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.0-9/p960x960/65280249_2337218496358764_6120770748366716928_o.jpg?_nc_cat=109&_nc_ohc=TscJSkXBPMgAX_qTofd&_nc_ht=scontent.fbkk2-7.fna&_nc_tp=6&oh=53ee4933049b0e8e2171d76bb0c837cd&oe=5EC98F8B" alt="Card image">
   <div class="card-body">
@@ -65,7 +66,7 @@
     <a href="sugun.html" class="btn btn-primary">See Profile</a>
   </div>
 </div>
-
+</div>
 
       </body>
 </html>
