--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="jumbotron">
   <h1>Sazzy Girls Co., Ltd.</h1>
     </div>
-  <div class="card" style="width:300px">
+  <div class="card-deck">
+    <div class="card" style="width:300px">
   <img class="card-img-top" src="https://scontent.fbkk2-6.fna.fbcdn.net/v/t1.0-9/70793699_2757257157646059_7550079063533027328_n.jpg?_nc_cat=107&_nc_oc=AQnRUQ3v2eJdyLWaLp95wYQGAG312aWD0I2OyvqRPphH-G0EApTQ8dfvEJAm48pEE0Q&_nc_ht=scontent.fbkk2-6.fna&oh=1c8a218fd6604a8be38d07b8382187d2&oe=5EA342FF" alt="Card image">
   <div class="card-body">
     <h4 class="card-title">Aninthisa Hanirattisai</h4>
