--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     
     <div class="jumbotron">
   <h1>Sazzy Girls Co., Ltd.</h1>
+      <p> Have a Sassy Life with "SAZZY GIRLS"</p>
     </div>
   <div class="card-deck">
     <div class="card" style="width:300px">
