--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     
     <div class="jumbotron">
-  <h1 style="background-color:DodgerBlue;>Sazzy Girls Co., Ltd.</h1>
+  <h1 >Sazzy Girls Co., Ltd.</h1>
     </div>
   <div class="card-deck">
     <div class="card" style="width:300px">
