--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 <div class="card" style="width:300px">
-  <img class="card-img-top" src="https://scontent.fbkk2-7.fna.fbcdn.net/v/t1.0-9/p720x720/82110282_1466051840235993_6779159646813814784_o.jpg?_nc_cat=106&_nc_ohc=aOZ0qAnc2jMAX_5ng04&_nc_ht=scontent.fbkk2-7.fna&_nc_tp=6&oh=9f598420f36af0b604331baa032f1c3d&oe=5E9249CA" alt="Queen's image">
+  <img class="card-img-top" src="https://scontent.fbkk2-8.fna.fbcdn.net/v/t1.0-9/84308811_1478723898968787_357290237635854336_n.jpg?_nc_cat=105&_nc_ohc=qiv_cgGjpIIAX-7LKGb&_nc_ht=scontent.fbkk2-8.fna&oh=ddf9164950811811b9163f48feea75a8&oe=5EDB476C" alt="Queen's image">
   <div class="card-body">
     <h4 class="card-title">Marisa Asanaruttanajinda</h4>
     <p class="card-text">Sazzy Girls Co., LTD. </p>
