--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   h1 {
   color: Tomato;
 }
+  h4 {
+  color:DarkSalmon;
+}
       .card-title{
   color:crimson;
 }
@@ -24,6 +27,7 @@
     
     <div class="jumbotron">
   <h1 >Sazzy Girls Co., Ltd.</h1>
+      <h4> Have a Sassy Life with "SAZZY GIRLS"
     </div>
   <div class="card-deck">
     <div class="card" style="width:300px">
