--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     
-    <div class="jumbotron">
+    <div class="jumbotron bg-warning">
   <h1 >Sazzy Girls Co., Ltd.</h1>
       <h4> Have a Sassy Life with "SAZZY GIRLS"
     </div>
