--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
   </div>
 </div>
 </div>
-
+<div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <button class="btn btn-outline-primary" type="button">Email</button>
+  </div>
+  <input type="text" class="form-control" placeholder="Leave your email here">
+</div>
       </body>
 </html>
