--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 </div>
 </div>
 <div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <button class="btn btn-outline-primary" type="button">Email</button>
-  </div>
   <input type="text" class="form-control" placeholder="Leave your email here">
+  <div class="input-group-append">
+    <button class="btn btn-primary" type="button">Register</button>
+  </div>
 </div>
       </body>
 </html>
